--- a/lab/client/index.html
+++ b/lab/client/index.html
@@ -63,6 +63,7 @@
         <li class="admin"><a href="/books/new">add book</a></li>
         <li class="admin"><a href="/books/search">search g-books</a></li>
         <!-- COMMENT: This will allow users to log in as an admin using a passphrase, but there is no way to log out. How would you enhance this application to allow a user to log out? -->
+        <!--Adding a route that will delete the localStorage cradentials that had been added with the login route. This should reset the setup and allow for a second login. -->
         <li><a href="/admin">login</a></li>
       </ul>
     </nav>
